--- a/functions/index.html
+++ b/functions/index.html
@@ -2015,7 +2015,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f8276699cf0&gt;, definition='COALESCE(SUM({select_expr}), 0)')
+<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f3d9420dcf0&gt;, definition='COALESCE(SUM({select_expr}), 0)')
 </code></pre>
 
 </details>
@@ -2028,7 +2028,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f8276699d80&gt;, definition='COALESCE(LOGICAL_OR({select_expr}), FALSE)')
+<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f3d9420dd80&gt;, definition='COALESCE(LOGICAL_OR({select_expr}), FALSE)')
 </code></pre>
 
 </details>
@@ -2041,7 +2041,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f8276699f30&gt;, definition='    SAFE_DIVIDE(\n        SUM(CAST(JSON_EXTRACT_SCALAR({select_expr}, &quot;$.sum&quot;) AS int64)),\n        SUM((SELECT SUM(value) FROM UNNEST(mozfun.hist.extract({select_expr}).values)))\n    )\n')
+<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f3d9420df30&gt;, definition='    SAFE_DIVIDE(\n        SUM(CAST(JSON_EXTRACT_SCALAR({select_expr}, &quot;$.sum&quot;) AS int64)),\n        SUM((SELECT SUM(value) FROM UNNEST(mozfun.hist.extract({select_expr}).values)))\n    )\n')
 </code></pre>
 
 </details>
@@ -2054,7 +2054,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f8276699e10&gt;, definition='    SAFE_DIVIDE(\n        SUM(mozfun.map.get_key(mozfun.hist.extract({select_expr}).values,0)),\n        SUM(mozfun.hist.threshold_count({select_expr},1))\n    )\n')
+<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f3d9420de10&gt;, definition='    SAFE_DIVIDE(\n        SUM(mozfun.map.get_key(mozfun.hist.extract({select_expr}).values,0)),\n        SUM(mozfun.hist.threshold_count({select_expr},1))\n    )\n')
 </code></pre>
 
 </details>
@@ -2067,7 +2067,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f82766e72e0&gt;, definition='COALESCE(SUM({select_expr}), 0)')
+<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f3d9425f2e0&gt;, definition='COALESCE(SUM({select_expr}), 0)')
 </code></pre>
 
 </details>
@@ -2078,7 +2078,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f82766e70a0&gt;, definition='COALESCE(LOGICAL_OR({select_expr}), FALSE)')
+<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f3d9425f130&gt;, definition='COALESCE(LOGICAL_OR({select_expr}), FALSE)')
 </code></pre>
 
 </details>
@@ -2089,7 +2089,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f82766e6e60&gt;, definition='    SAFE_DIVIDE(\n        SUM(CAST(JSON_EXTRACT_SCALAR({select_expr}, &quot;$.sum&quot;) AS int64)),\n        SUM((SELECT SUM(value) FROM UNNEST(mozfun.hist.extract({select_expr}).values)))\n    )\n')
+<pre><code class="language-sql">functools.partial(&lt;function FunctionsSpec.from_dict.&lt;locals&gt;.&lt;dictcomp&gt;.&lt;lambda&gt; at 0x7f3d9425ee60&gt;, definition='    SAFE_DIVIDE(\n        SUM(CAST(JSON_EXTRACT_SCALAR({select_expr}, &quot;$.sum&quot;) AS int64)),\n        SUM((SELECT SUM(value) FROM UNNEST(mozfun.hist.extract({select_expr}).values)))\n    )\n')
 </code></pre>
 
 </details>
