--- a/data_sources/fenix/index.html
+++ b/data_sources/fenix/index.html
@@ -2147,13 +2147,13 @@ SELECT
     expo.submission_date
     , expo.client_id
     , case when (conv.set_to_default &gt;= 1 AND expo.set_to_default_card &gt;= 1) then 1
-           when (conv.set_to_default = 0 AND expo.set_to_default_card &gt;= 1) then 0 else null end as set_to_default_flag
+           when (coalesce(conv.set_to_default, 0) = 0 AND expo.set_to_default_card &gt;= 1) then 0 else null end as set_to_default_flag
     , case when (conv.turn_on_notifications &gt;= 1 AND expo.turn_on_notifications_card &gt;= 1) then 1
-           when (conv.turn_on_notifications = 0 AND expo.turn_on_notifications_card &gt;= 1) then 0 else null end as turn_on_notifications_flag
+           when (coalesce(conv.turn_on_notifications, 0) = 0 AND expo.turn_on_notifications_card &gt;= 1) then 0 else null end as turn_on_notifications_flag
     , case when (conv.sign_in &gt;= 1 AND expo.sign_in_card &gt;= 1) then 1
-           when (conv.sign_in = 0 AND expo.sign_in_card &gt;= 1) then 0 else null end as sign_in_flag
+           when (coalesce(conv.sign_in,0) = 0 AND expo.sign_in_card &gt;= 1) then 0 else null end as sign_in_flag
     , case when (conv.set_to_default &gt;= 1 AND expo.set_to_default_card &gt;= 1) OR (conv.turn_on_notifications &gt;= 1 AND expo.turn_on_notifications_card &gt;= 1) OR (conv.sign_in &gt;= 1 AND expo.sign_in_card &gt;= 1)then 1
-           when (conv.set_to_default = 0 AND conv.turn_on_notifications = 0 AND conv.sign_in = 0)  AND (set_to_default_card &gt;= 1 OR turn_on_notifications_card &gt;= 1 OR sign_in_card &gt;= 1) then 0 else null end as at_least_1_cta
+           when (coalesce(conv.set_to_default, 0) = 0 AND coalesce(conv.turn_on_notifications, 0) = 0 AND coalesce(conv.sign_in,0) = 0)  AND (set_to_default_card &gt;= 1 OR turn_on_notifications_card &gt;= 1 OR sign_in_card &gt;= 1) then 0 else null end as at_least_1_cta
 
 FROM (
       SELECT
